...
    var year by remember { mutableStateOf(2024) }
    var date by remember { mutableStateOf(("")) }

    val (firstDayOfWeek, monthList) = getMonthDays(year, monthIndex)
    val displayMonths = DateFormatSymbols().months

    var weekDays = listOf<String>("Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun")
    var currentWeek = 1
    var numOfWeeks = 0

    //Fetch the holidays when the year or device code changes
    val deviceCountryCode = LocalContext.current.resources.configuration.locales[0].country

...
